--- a/src/public/styles/global.css
+++ b/src/public/styles/global.css
@@ -1,12 +1,12 @@
 body, html {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;;
     height: 100%;
+    /* #2fd219 */
     --main-color: #1976d2;
-    --main-color-lay: #1976d2af;
+    --main-color-lay: #639fdb;
     --sec-color: whitesmoke;
     --sec-color-lay: #FFFFFF;
     --third-color: rgb(41, 95, 211);
-
     --secondary-font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -18,9 +18,28 @@ body {
     background: var(--sec-color);
 }
 
+::-webkit-scrollbar {
+    width: 3px;
+}
+  
+  
+::-webkit-scrollbar-track {
+    background: white; 
+}
+   
+  
+::-webkit-scrollbar-thumb {
+    background: var(--main-color); 
+}
+  
+::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+}
+
 /* markdown */
 
 .markdown * {
+    font-family: var(--secondary-font);
     overflow-wrap: break-word;
 }
 
@@ -446,13 +465,14 @@ header {
 }
 
 .navbar {
+    font-family: var(--secondary-font);
     position: fixed;
     width: 100%;
-    background: var(--sec-color);
+    background: var(--main-color);
     top: 0;
     left: 0;
     height: 56px;
-    box-shadow: 0 1px 0 #c2c1c1;
+    box-shadow: 0 1px 0 var(--main-color);
 }
 
 .navigation {
@@ -467,10 +487,20 @@ header {
     padding-right: 10px;
 }
 
-.nav-user a {
+.nav-user{
+    display: flex;
+    height: 56px;
+}
+
+.nav-user-name {
     font-size: 1.2rem;
-    color: var(--main-color);
-    text-transform: uppercase;
+    position: relative;
+    padding-left: 4px;
+    height: fit-content;
+    color: var(--sec-color);
+    font-weight: bold;
+    top: 50%;
+    transform: translate(0,-50%);
 }
 
 .nav-items ul {
@@ -493,13 +523,13 @@ header {
 }
 
 .nav-logo a {
-    color: var(--main-color);
+    color: var(--sec-color);
     text-decoration: none;
     font-size: 1.5rem;
 }
 
 .nav-items a {
-    color: var(--main-color);
+    color: var(--sec-color);
     font-size: 1.2rem;
     text-decoration: none;
 }
@@ -523,7 +553,7 @@ header {
 .line {
     width: 25px;
     height: 2px;
-    background: var(--main-color);
+    background: var(--sec-color);
 }
 
 .side-drawer {
@@ -1124,7 +1154,6 @@ header {
 .create-content-state {
     margin: -5px;
     padding: 10px;
-    border-bottom: 1px solid rgba(50, 50, 50, 0.5);
 }
 
 .create-content-state-component {
@@ -1929,7 +1958,7 @@ header {
     font-weight: bold;
     font-size: 11px;
     line-height: 13px;
-    color: #999;
+    color: var(--main-color);
 }
 
 .des {
