--- a/src/static/views/pages/user-profile.ejs
+++ b/src/static/views/pages/user-profile.ejs
@@ -3,12 +3,12 @@
 <head>
     <title>C4 projects</title>
     <link type="text/css" rel="stylesheet" href='/styles/global.css'>
-    <link type="text/css" rel="stylesheet" href='/styles/atom-one-dark.css'>
+    <link type="text/css" rel="stylesheet" href='/styles/prism.css'>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
 </head>
 <body>
 <div id="root"><%- reactApp %></div>
 <script src="/myJs/animate-input.js" charset="utf-8"></script>
 <script src="/myJs/reveal.js" charset="utf-8"></script>
-<script src="/js/5fa7911fffe6ab523c6d.js"></script><script src="/js/80c0028982e6797add80.js"></script><script src="/js/eba10543cd5e6c5f7a1c.js"></script><script src="/js/cda1ef6061adc9a1f13f.js"></script><script src="/js/2548347cce06b83731f9.js"></script></body>
+<script src="/js/5fa7911fffe6ab523c6d.js"></script><script src="/js/80c0028982e6797add80.js"></script><script src="/js/8a67da108209c779ad8e.js"></script><script src="/js/cda1ef6061adc9a1f13f.js"></script><script src="/js/2548347cce06b83731f9.js"></script></body>
 </html>
