--- a/src/static/views/pages/index.ejs
+++ b/src/static/views/pages/index.ejs
@@ -3,7 +3,7 @@
 <head>
     <title>C4 projects</title>
     <link type="text/css" rel="stylesheet" href='/styles/global.css'>
-    <link type="text/css" rel="stylesheet" href='/styles/atom-one-dark.css'>
+    <link type="text/css" rel="stylesheet" href='/styles/prism.css'>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
 </head>
 <body>
