--- a/src/static/views/pages/create-blog.ejs
+++ b/src/static/views/pages/create-blog.ejs
@@ -10,5 +10,5 @@
 <div id="root"><%- reactApp %></div>
 <script src="/myJs/animate-input.js" charset="utf-8"></script>
 <script src="/myJs/reveal.js" charset="utf-8"></script>
-<script src="/js/5fa7911fffe6ab523c6d.js"></script><script src="/js/80c0028982e6797add80.js"></script><script src="/js/97eae17e9b5457275422.js"></script></body>
+<script src="/js/react.createBlog.createThread.index.indexForum.login.signUp.userProfile.js"></script><script src="/js/react.createBlog.createThread.index.indexForum.userProfile.js"></script><script src="/js/createBlog.js"></script></body>
 </html>
