--- a/src/static/views/pages/login.ejs
+++ b/src/static/views/pages/login.ejs
@@ -10,5 +10,5 @@
 <div id="root"><%- reactApp %></div>
 <script src="/myJs/animate-input.js" charset="utf-8"></script>
 <script src="/myJs/reveal.js" charset="utf-8"></script>
-<script src="/js/5fa7911fffe6ab523c6d.js"></script><script src="/js/1b5b3a546ce4c7609553.js"></script></body>
+<script src="/js/react.createBlog.createThread.index.indexForum.login.signUp.userProfile.js"></script><script src="/js/login.js"></script></body>
 </html>
