--- a/src/static/views/pages/user-profile.ejs
+++ b/src/static/views/pages/user-profile.ejs
@@ -10,5 +10,5 @@
 <div id="root"><%- reactApp %></div>
 <script src="/myJs/animate-input.js" charset="utf-8"></script>
 <script src="/myJs/reveal.js" charset="utf-8"></script>
-<script src="/js/5fa7911fffe6ab523c6d.js"></script><script src="/js/80c0028982e6797add80.js"></script><script src="/js/8a67da108209c779ad8e.js"></script><script src="/js/cda1ef6061adc9a1f13f.js"></script><script src="/js/2548347cce06b83731f9.js"></script></body>
+<script src="/js/react.createBlog.createThread.index.indexForum.login.signUp.userProfile.js"></script><script src="/js/react.createBlog.createThread.index.indexForum.userProfile.js"></script><script src="/js/react.createThread.userProfile.js"></script><script src="/js/react.userProfile.js"></script><script src="/js/userProfile.js"></script></body>
 </html>
