--- a/src/static/views/pages/create-thread.ejs
+++ b/src/static/views/pages/create-thread.ejs
@@ -10,5 +10,5 @@
 <div id="root"><%- reactApp %></div>
 <script src="/myJs/animate-input.js" charset="utf-8"></script>
 <script src="/myJs/reveal.js" charset="utf-8"></script>
-<script src="/js/5fa7911fffe6ab523c6d.js"></script><script src="/js/80c0028982e6797add80.js"></script><script src="/js/8a67da108209c779ad8e.js"></script><script src="/js/61fd3d3dda8d7815efe6.js"></script></body>
+<script src="/js/react.createBlog.createThread.index.indexForum.login.signUp.userProfile.js"></script><script src="/js/react.createBlog.createThread.index.indexForum.userProfile.js"></script><script src="/js/react.createThread.userProfile.js"></script><script src="/js/createThread.js"></script></body>
 </html>
