--- a/src/static/views/pages/index-forum.ejs
+++ b/src/static/views/pages/index-forum.ejs
@@ -10,5 +10,5 @@
 <div id="root"><%- reactApp %></div>
 <script src="/myJs/animate-input.js" charset="utf-8"></script>
 <script src="/myJs/reveal.js" charset="utf-8"></script>
-<script src="/js/5fa7911fffe6ab523c6d.js"></script><script src="/js/80c0028982e6797add80.js"></script><script src="/js/20b1655e125db7ec979a.js"></script><script src="/js/f3abe6bcfdddcdb91235.js"></script></body>
+<script src="/js/react.createBlog.createThread.index.indexForum.login.signUp.userProfile.js"></script><script src="/js/react.createBlog.createThread.index.indexForum.userProfile.js"></script><script src="/js/react.indexForum.js"></script><script src="/js/indexForum.js"></script></body>
 </html>
