--- a/src/static/public/styles/global.css
+++ b/src/static/public/styles/global.css
@@ -3,6 +3,7 @@ html {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     height: 100%;
+    width: 100%;
     /* #2fd219 */
     --main-color: #1976d2;
     --main-color-lay: #639fdb;
@@ -463,6 +464,10 @@ a {
     }
 }
 
+#root {
+    width: 100%;
+}
+
 /*NAVBAR.js*/
 
 header {
@@ -473,11 +478,13 @@ header {
     font-family: var(--secondary-font);
     position: fixed;
     width: 100%;
-    background: var(--main-color);
+    /*background: var(--main-color);*/
+    background: white;
     top: 0;
     left: 0;
     height: 56px;
-    box-shadow: 0 1px 0 var(--main-color);
+    /*box-shadow: 0 1px 0 var(--main-color);*/
+    box-shadow: 0 1px 1px rgba(50, 50, 50, 1);
 }
 
 .navigation {
@@ -495,17 +502,36 @@ header {
 .nav-user {
     display: flex;
     height: 56px;
+    flex-flow: row nowrap;
+    align-content: center;
+}
+
+.nav-user div {
+    display: inline-block;
+    align-content: center;
+    -webkit-align-content: center;
 }
 
 .nav-user-name {
     font-size: 1.2rem;
     position: relative;
     padding-left: 4px;
-    height: fit-content;
-    color: var(--sec-color);
+    color: var(--main-color);
+    -webkit-align-self: center;
+    align-self: center;
     font-weight: bold;
-    top: 50%;
-    transform: translate(0, -50%);
+}
+
+.nav-user-photo {
+    position: relative;
+    width: 30px;
+    height: 30px;
+    align-self: center;
+    -webkit-align-self: center;
+    background-color: var(--main-color-lay);
+    border-radius: 100%;
+    display: block;
+    background-size: 100px 100px;
 }
 
 .nav-items ul {
@@ -528,13 +554,13 @@ header {
 }
 
 .nav-logo a {
-    color: var(--sec-color);
+    color: var(--main-color);
     text-decoration: none;
     font-size: 1.5rem;
 }
 
 .nav-items a {
-    color: var(--sec-color);
+    color: var(--main-color);
     font-size: 1.2rem;
     text-decoration: none;
 }
@@ -558,7 +584,7 @@ header {
 .line {
     width: 25px;
     height: 2px;
-    background: var(--sec-color);
+    background: var(--main-color);
 }
 
 .side-drawer {
@@ -774,6 +800,7 @@ header {
     color: var(--main-color);
     font-weight: bold;
     align-self: center;
+    -webkit-align-self: center;
     font-size: 20px;
     padding-left: 1rem;
 }
@@ -1902,24 +1929,26 @@ header {
 
 .head-card {
     display: flex;
+    flex-flow: row nowrap;
+    align-content: center;
     width: fit-content;
     height: 44px;
 }
 
-.photo {
+.head-card-photo {
     position: relative;
     width: 30px;
     height: 30px;
+    align-self: center;
+    -webkit-align-self: center;
     background-color: var(--main-color-lay);
     border-radius: 100%;
-    top: 50%;
-    transform: translate(0, -50%);
 }
 
 .photo-details {
     position: relative;
-    top: 50%;
-    transform: translate(0, -50%);
+    align-self: center;
+    -webkit-align-self: center;
     height: fit-content;
     width: fit-content;
     padding-right: 3%;
@@ -1958,6 +1987,10 @@ header {
     overflow: hidden;
 }
 
+.writeup-hidden {
+    display: none;
+}
+
 .read-more {
     z-index: 2;
     width: 100%;
@@ -1975,6 +2008,10 @@ header {
     cursor: pointer;
     width: fit-content;
     padding-right: 5%;
+}
+
+.read-more-less {
+    display: none;
 }
 
 .read-more .button-comments {
@@ -2143,14 +2180,16 @@ button {
 
 .comment-box-header {
     margin-bottom: 6px;
+    padding: 3px 0;
 }
 
-.user-comment {
+.comment-user {
     position: relative;
-    padding-bottom: 1%;
 }
 
 .comment-photo {
+    align-self: center;
+    -webkit-align-self: center;
     position: relative;
     width: 30px;
     height: 30px;
@@ -2159,7 +2198,9 @@ button {
     margin-right: 2%;
 }
 
-.user-comment-name {
+.comment-user-name {
+    align-self: center;
+    -webkit-align-self: center;
     font-size: 14px;
     color: var(--main-color);
     font-weight: 400;
@@ -2170,7 +2211,7 @@ button {
     padding-inline-start: 0;
 }
 
-.user-des {
+.comment-user-des {
     font-size: 10px;
     color: #555;
 }
