--- a/src/views/pages/template.ejs
+++ b/src/views/pages/template.ejs
@@ -5,6 +5,10 @@
     <link type="text/css" rel="stylesheet" href='/styles/global.css'>
     <link type="text/css" rel="stylesheet" href='/styles/prism.css'>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
+    <script
+            src="https://code.jquery.com/jquery-3.5.0.min.js"
+            integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ="
+            crossorigin="anonymous"></script>
 </head>
 <body>
 <div id="root"><%- reactApp %></div>
