--- a/src/static/public/styles/global.css
+++ b/src/static/public/styles/global.css
@@ -625,6 +625,10 @@ header {
     width: 208px;
 }
 
+.search{
+    padding: 0 1rem;
+}
+
 .userId {
     font-size: 12px;
 }
@@ -2042,52 +2046,7 @@ button {
     border-radius: 4px;
 }
 
-.home-search {
-    position: relative;
-    width: 100%;
-    height: 40px;
-    border: 1px solid var(--main-color);
-    border-radius: 4px;
-    top: 3%;
-    display: flex;
-}
 
-.search-svg {
-    position: relative;
-    top: 50%;
-    transform: translate(0, -50%);
-    left: 7px;
-    width: fit-content;
-    height: fit-content;
-}
-
-.search-text {
-    position: relative;
-    width: 80%;
-    height: 32px;
-    font-size: 18px;
-    line-height: 180%;
-    color: var(--main-color);
-    left: 52px;
-    margin: 0 0;
-    top: 50%;
-    transform: translate(0, -50%);
-}
-
-.search-svg button {
-    outline: none;
-    background: none;
-    border: none;
-}
-
-@media (max-width: 425px) {
-    .home-search {
-        border: none;
-    }
-    .search-text {
-        left: 16px;
-    }
-}
 
 
 /*comment-container.js*/
