--- a/src/static/public/styles/global.css
+++ b/src/static/public/styles/global.css
@@ -637,7 +637,7 @@ header {
     position: fixed;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, 0.5);
     z-index: 100;
     top: 0;
     left: 0;
@@ -714,6 +714,36 @@ header {
 
 .hash .activity .activity-detail .number {
     font-size: 20px;
+}
+
+.search-box{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 60%;
+    height: 56px;
+    background-color: whitesmoke;
+    z-index: 100;
+    border: 2px solid var(--main-color);
+    border-radius: 16px;
+}
+
+.search-input{
+    width: 90%;
+    margin: 0 1rem;
+    color: var(--main-color);
+    font-size: 24px;
+}
+
+.search-box-svg{
+    position: relative;
+    width: fit-content;
+    height: fit-content;
+    top: 50%;
+    transform: translate(0,-50%);
+    float: right;
+    margin: 0 2rem;
 }
 
 /*signup.jsx*/
