--- a/src/static/public/styles/global.css
+++ b/src/static/public/styles/global.css
@@ -2858,6 +2858,7 @@ textarea:focus {
 
 .latest-posts {
     width: 50%;
+    margin-right: 20px;
 }
 
 .links-social {
@@ -2878,4 +2879,70 @@ textarea:focus {
 
 .app {
     text-align: center;
+}
+.categories-comp{
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+.tags {
+    font: var(--secondary-font);
+    padding: 0;
+    margin: 0;
+    font-weight: 400;
+}
+
+.tags li {
+    padding: 0;
+    margin: 0 4px 4px 0;
+    float: left;
+    display: inline-block;
+}
+.tags li a {
+    float: left;
+    display: block;
+    border-radius: 4px;
+    padding: 2px 10px;
+    color: gray;
+    background: rgba(0, 0, 0, 0.05);
+}
+.tags li a:hover {
+    color: #fff;
+    background: #639fdb;
+}
+.list-unstyled li a{
+    color: #ffffff;
+    font-weight: lighter;
+    font-size: 20px;
+}
+.list-unstyled{
+    list-style: none;
+    padding: 0 0;
+}
+.list-unstyled li{
+    padding: 5px;
+}
+.latest-post-card{
+    width: 100%;
+    height: 70px;
+    border: 1px solid rgba(100, 100, 100, 0.5);
+    display: flex;
+    margin-bottom: 28px;
+}
+.latest-post-card img {
+    width: 33.3333%;
+    position: relative;
+    float: left;
+    height: 100%;
+}
+.latest-post-card-details {
+    position: relative;
+    width: 66.6666%;
+}
+
+.latest-post-card:hover {
+    box-shadow: 0 0 4px rgba(0, 174, 255, 0.4);
+}
+
+.latest-post-card-h {
+    margin: auto;
+    font-weight: lighter;
 }
