--- a/src/static/public/styles/global.css
+++ b/src/static/public/styles/global.css
@@ -2568,6 +2568,7 @@ textarea:focus {
 }
 
 .h {
+    text-align: center;
     margin: 0.5rem 0;
     position: relative;
     font-size: 26px;
@@ -2794,13 +2795,15 @@ textarea:focus {
 }
 
 .popular-head {
+    width: 100%;
     font-weight: lighter;
-    margin-bottom: 30px;
-    padding-bottom: 20px;
+    margin-bottom: 1px;
+    padding-bottom: 10px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .pop-post-card-h {
+    padding: 10px 0;
     position: relative;
     font-size: 1rem;
     font-weight: lighter;
@@ -2929,10 +2932,10 @@ textarea:focus {
 
 .search-hash{
     width: fit-content;
-    background-color: var(--main-color);
-    padding: 2px 4px;
+    border-radius: 4px;
+    padding: 2px 10px;
     color: white;
-    border-radius: 2px;
+    background: var(--main-color);
 }
 
 .categories-comp{
@@ -2941,7 +2944,7 @@ textarea:focus {
 .tags {
     font: var(--secondary-font);
     padding: 0;
-    margin: 0;
+    margin: 20px 0;
     font-weight: 400;
 }
 
@@ -2961,7 +2964,7 @@ textarea:focus {
 }
 .tags li a:hover {
     color: #fff;
-    background: #639fdb;
+    background: var(--main-color);
 }
 .list-unstyled li a{
     color: #ffffff;
