--- a/src/static/public/styles/global.css
+++ b/src/static/public/styles/global.css
@@ -2498,6 +2498,7 @@ textarea:focus {
     position: relative;
     text-align: center;
     margin: auto;
+    margin-bottom: 50px;
 }
 
 .c4-blog-heading p {
@@ -2568,7 +2569,6 @@ textarea:focus {
 }
 
 .h {
-    text-align: center;
     margin: 0.5rem 0;
     position: relative;
     font-size: 26px;
