--- a/src/static/public/styles/global.css
+++ b/src/static/public/styles/global.css
@@ -484,6 +484,21 @@ header {
     z-index: 9999;
 }
 
+.dropdown-content {
+    top:56px;
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+  }
+  
+  .nav-user:hover .dropdown-content {
+    display: block;
+  }
+
 .navbar {
     font-family: var(--secondary-font);
     position: fixed;
